--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -3,17 +3,17 @@
 A lot of emphasis in social television is put on the virtual social
 aspect.  A lot of viewer interaction is online, via twitter, facebook,
 blogs, or virtual viewing rooms.  However, the level and personal
-depth of this social interaction is often questionable.  TuBely aims
+depth of this social interaction is often questionable.  {\sys} aims
 to increase viewer’s real life social interaction.  By making viewing
 suggestions based on the viewer and who they are physically with, this
 system aims to reduce fights over the television remote, while using
 this information to create more informative suggestions.
 
 Taking into account the time, location, and shows that you watch with
-your friends, TuBely makes smarter, situational suggestions.  In
-addition, TuBely pulls from the Pandora tagging model to offer more
+your friends, {\sys} makes smarter, situational suggestions.  In
+addition, {\sys} pulls from the Pandora tagging model to offer more
 specialized categories of shows, so that the user can choose what kind
 of show that they’re in the mood for.  Borrowing from internet radio’s
-“currently listening” queue model, TuBely has a queue of the shows
+“currently listening” queue model, {\sys} has a queue of the shows
 you’re currently watching, but allows the viewer to throw shows that
 they’re generally interested in into their WatchBox.
