--- a/paper/local.bib
+++ b/paper/local.bib
@@ -1,3 +1,65 @@
+@article{chausse,
+journal={Louis Chaussé SeeVibes Blog},
+title={50 Apps that Socialize Your TV},
+howpublished = {\url{http://blog.seevibes.com/social-tv-app/50-apps-that-socialize-your-tv/}},
+}
+
+
+@article{montpetit,
+author={Montpetit, M.-J.},
+title={Your Content, Your Networks, Your Devices: Social Networks Meet Your TV Experience},
+journal={ACM Computers in Entertainment (CIE): TV and Video Entertainment Environments},
+year={2009},
+}
+
+@article{su,
+author={Xiaoyuan Su and Taghi M. Khoshgoftaar},
+title={A Survey of Collaborative Filtering Techniques},
+journal={Advances in Artificial Intelligence},
+year={2009},
+}
+
+papagelis
+Incremental Collaborative Filtering for HighlyScalable Recommendation Algorithms
+Manos Papagelis,Ioannis Rousidis, Dimitris Plexousakis, Elias Theoharopoulos ISMI 2005
+http://queens.db.toronto.edu/~papaggel/docs/papers/all/ISMIS05-Incremental_Collaborative_Filtering_for_Highly-Scalable_Recommendation_Algorithms.pdf
+
+vozalis
+Unison-CF: a multiple-component, adaptive
+collaborative ﬁltering system
+Manolis Vozalis and Konstantinos G. Margaritis 2004
+http://users.uom.gr/~mans/papiria/voz-unison-ah2004.pdf
+
+melville
+Proceedings of the Eighteenth National Conference on Artificial Intelligence(AAAI-2002), 
+pp. 187-192, Edmonton, Canada, July 2002
+Content-Boosted Collaborative Filtering for Improved Recommendations
+Prem Melville and Raymond J. Mooney and Ramadass Nagarajan
+http://www.cs.utexas.edu/users/ml/papers/cbcf-aaai-02.pdf
+
+@article{rec,
+title={Recommender Systems},
+howpublished={\url{http://www.cis.upenn.edu/~ungar/CF/}},
+}
+
+@article{grooveshark,
+title={Grooveshark},
+howpublished={\url{http://grooveshark.com/}},
+}
+
+@article{spotify,
+title={Spotify},
+howpublished={\url{http://www.spotify.com/us/ipad/}},
+}
+
+@article{pandora,
+title={Pandora},
+howpublished={\url{http://www.pandora.com/}},
+}
+
+CommenTV paper:  http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=06181062
+
+
 @article{scads,
   title={SCADS: Scale-independent storage for social computing applications},
   author={Armbrust, M. and Fox, A. and Patterson, D. and Lanham, N. and Trushkowsky, B. and Trutna, J. and Oh, H.},
@@ -325,7 +387,7 @@ ISSN={},}
     author = "James Tauber",
 	TITLE     = "{Pinax}",
         HOWPUBLISHED = {\url{http://www.pinaxproject.com/}},
-    month = {October},
+    Month = {October},
     year = 2011,
 }
 
