--- a/paper/main.ltx
+++ b/paper/main.ltx
@@ -1,5 +1,5 @@
 % -*-LaTeX-*-
-\documentclass{ieee}
+\documentclass[final]{ieee}
 
 \usepackage{times}
 \usepackage{color}
@@ -10,6 +10,7 @@
 \newcommand{\ixpt}{\fontsize{15pt}{15pt}}
 \newcommand{\xiipt}{\fontsize{15pt}{15pt}}
 \newcommand{\xxvpt}{\fontsize{15pt}{15pt}}
+\newcommand{\sys}{Tubely}
 
 \begin{document}
 
@@ -25,8 +26,8 @@
 \input{intro}
 \input{relwk}
 \input{system}
-%\input{related}
-%\input{concl}
+\input{recommendations}
+\input{concl}
 
 %\balance 
 
