--- a/paper/relwk.tex
+++ b/paper/relwk.tex
@@ -34,21 +34,21 @@ recommend items based upon discrete classifiers on the content.
 Finally, the hybrid approach combines both collaborative and content
 filtering, which is what Netflix does.  \cite{su} \cite{melville} all
 conclude that the hybrid approach, although more complex, increases
-prediction performance.  Thus, TuBely adopts a hybrid of collaborative
+prediction performance.  Thus, {\sys} adopts a hybrid of collaborative
 and content filtering, putting a large emphasis on your real life
 social tv watching habits, as well as adding other potential factors
 to the recommendation voting.
 
 \subsection{Internet Radio}
 Internet radio, in terms of socialization and personalization, has
-evolved much quicker than television.  Thus, TuBely draws inspiration
+evolved much quicker than television.  Thus, {\sys} draws inspiration
 from the models that internet radio has created.  The first
 inspiration is the “currently listening” queue that services like
 Grooveshark \cite{grooveshark} and Spotify \cite{spotify} have.  They
 make a distinction between the user’s currently streaming queue and
 the list of songs that the user may be interested in.  In addition,
 Pandora’s \cite{pandora} content-based collaborative filtering system
-inspired TuBely.  In Pandora, songs are tagged with specific details
+inspired {\sys}.  In Pandora, songs are tagged with specific details
 to help create better recommendations.
 
 \subsection{Related Work}
@@ -65,7 +65,7 @@ GetGlue, IntoNow, ScreenTribe, TunerFish, and WatchPoints
 interaction.  IntoNow notifies your friend if you both are watching at
 the same time, but it’s retroactive socialization in that it notifies
 you after you’ve already made the conscious effort to already start
-watching the show.  On the other hand, TuBely pushes for proactive
+watching the show.  On the other hand, {\sys} pushes for proactive
 socialization in that you’re already hanging out with friends and want
-to decide what to watch.  TuBely encourages viewers to watch things
+to decide what to watch.  {\sys} encourages viewers to watch things
 with their friends in real life.
