bibliography, some small changes, etc

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,13 +1,17 @@
 \section{Introduction}
 
-A lot of emphasis in social television is put on the virtual social
-aspect.  A lot of viewer interaction is online, via twitter, facebook,
-blogs, or virtual viewing rooms.  However, the level and personal
-depth of this social interaction is often questionable.  {\sys} aims
-to increase viewer’s real life social interaction.  By making viewing
-suggestions based on the viewer and who they are physically with, this
-system aims to reduce fights over the television remote, while using
-this information to create more informative suggestions.
+{\sys} is a system designed to help users keep track of what
+television they want to watch, and in doing so assist in choosing what
+to watch when a group gathers together.
+
+A lot of viewer interaction is online, via twitter, facebook, blogs,
+or virtual viewing rooms.  However, the level and personal depth of
+this social interaction is often questionable.  {\sys} aims to
+increase viewers' real life social interaction by making viewing
+suggestions based on the group of people gathered together to
+watch. This system aims to reduce fights over the television remote,
+while using individual and group watching patterns to create more
+informative suggestions.
 
 Taking into account the time, location, and shows that you watch with
 your friends, {\sys} makes smarter, situational suggestions.  In
@@ -15,5 +19,6 @@ addition, {\sys} pulls from the Pandora tagging model to offer more
 specialized categories of shows, so that the user can choose what kind
 of show that they’re in the mood for.  Borrowing from internet radio’s
 “currently listening” queue model, {\sys} has a queue of the shows
-you’re currently watching, but allows the viewer to throw shows that
-they’re generally interested in into their WatchBox.
+you’re currently watching, but allows the viewer to collect and keep
+track of shows they might want to watch in the future by storing them
+in a special playlist known as a \emph{WatchBox}.  
