--- a/paper/local.bib
+++ b/paper/local.bib
@@ -1,4 +1,20 @@
+@misc{jwplayer,
+title={JWPlayer},
+howpublished={\url{http://www.longtailvideo.com/}},
+}
+
+@misc{flask,
+title={Flask: A Python Microframework},
+howpublished={\url{http://flask.pocoo.org/}},
+}
+
+@misc{jinja,
+title={Jinja: The Python Template Engine},
+howpublished={\url{http://jinja.pocoo.org/}},
+}
+
 @article{chausse,
+author={Louis Chausse},
 journal={Louis Chaussé SeeVibes Blog},
 title={50 Apps that Socialize Your TV},
 howpublished = {\url{http://blog.seevibes.com/social-tv-app/50-apps-that-socialize-your-tv/}},
@@ -19,40 +35,45 @@ journal={Advances in Artificial Intelligence},
 year={2009},
 }
 
-papagelis
-Incremental Collaborative Filtering for HighlyScalable Recommendation Algorithms
-Manos Papagelis,Ioannis Rousidis, Dimitris Plexousakis, Elias Theoharopoulos ISMI 2005
-http://queens.db.toronto.edu/~papaggel/docs/papers/all/ISMIS05-Incremental_Collaborative_Filtering_for_Highly-Scalable_Recommendation_Algorithms.pdf
+@article{papagelis,
+title={Incremental Collaborative Filtering for HighlyScalable Recommendation Algorithms},
+author={Manos Papagelis and Ioannis Rousidis and Dimitris Plexousakis and Elias Theoharopoulos},
+journal={ISMI},
+year={2005},
+}
 
-vozalis
-Unison-CF: a multiple-component, adaptive
-collaborative ﬁltering system
-Manolis Vozalis and Konstantinos G. Margaritis 2004
-http://users.uom.gr/~mans/papiria/voz-unison-ah2004.pdf
+@article{vozalis,
+title={Unison-CF: a multiple-component, adaptive collaborative ﬁltering system},
+author={Manolis Vozalis and Konstantinos G. Margaritis},
+year={2004},
+howpublished={\url{http://users.uom.gr/~mans/papiria/voz-unison-ah2004.pdf}},
+}
 
-melville
-Proceedings of the Eighteenth National Conference on Artificial Intelligence(AAAI-2002), 
-pp. 187-192, Edmonton, Canada, July 2002
-Content-Boosted Collaborative Filtering for Improved Recommendations
-Prem Melville and Raymond J. Mooney and Ramadass Nagarajan
-http://www.cs.utexas.edu/users/ml/papers/cbcf-aaai-02.pdf
+@article{melville,
+journal={Proceedings of the Eighteenth National Conference on Artificial Intelligence},
+month={July},
+year={2002},
+title={Content-Boosted Collaborative Filtering for Improved Recommendations},
+author={Prem Melville and Raymond J. Mooney and Ramadass Nagarajan},
+address={Edmonton, Canada},
+}
 
-@article{rec,
+@misc{rec,
 title={Recommender Systems},
 howpublished={\url{http://www.cis.upenn.edu/~ungar/CF/}},
 }
 
-@article{grooveshark,
+@misc{grooveshark,
 title={Grooveshark},
 howpublished={\url{http://grooveshark.com/}},
 }
 
-@article{spotify,
+@misc{spotify,
 title={Spotify},
 howpublished={\url{http://www.spotify.com/us/ipad/}},
 }
 
-@article{pandora,
+@misc{pandora,
 title={Pandora},
 howpublished={\url{http://www.pandora.com/}},
 }
