--- a/paper/concl.tex
+++ b/paper/concl.tex
@@ -1,6 +1,4 @@
-\section{Conclusion}
-
-\subsection{Future Work}
+\section{Future Work}
 Implementing a recommendation engine is not an easy task.  Future work
 includes implementation of our situational recommendation engine, and
 tweaking the voting parameters such that the recommended programs are
@@ -30,6 +28,13 @@ promoted suggestions and inline advertising to create revenue.  In
 addition, the data analytics collected by our system could be used to
 generate revenue.
 
-\subsection{Discussion}
+\section{Conclusion}
+
+{\sys} is an application which helps users keep track of shows they
+want to watch, and uses individual user preferences and watching
+habits to help give tv show suggestions for groups.  {\sys} let's
+users search for shows based on recommendations from collaborative
+filtering and specified moods.  We have implemented {\sys} as a stand
+alone web prototype.
 
 %% NEHA TODO
