--- a/paper/main.ltx
+++ b/paper/main.ltx
@@ -2,7 +2,7 @@
 \documentclass[final]{ieee}
 
 \usepackage{times}
-\usepackage{color}
+%\usepackage{color}
 \usepackage{ieeefig}
 
 \renewcommand{\tt}[1]{\texttt{#1}}
