--- a/paper/system.tex
+++ b/paper/system.tex
@@ -17,14 +17,14 @@ in your WatchBox or using our situational recommendation system to
 recommend a new show.  Users can override or remove any recommendation
 at any time.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering 
 \includegraphics[width=0.45\textwidth]{pics/browse.png}
 \caption{Browse for shows and add them to your WatchBox.}
 \label{fig:model1}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h!]
 \centering
 \includegraphics[width=0.45\textwidth]{pics/watchbox.png}}
 \caption{Add shows from the WatchBox to your playlist.}
@@ -71,19 +71,18 @@ specific categories.  For instance, the ‘girly’ category may contain
 shows like Gossip Girl or The Hills.  The ‘trashy’ category will have
 shows like Jersey Shore or the Real Houswives.
 
-\begin{figure}
+\begin{figure}[h!]
 \centering 
 \label{fig:model3}
 \includegraphics[width=0.45\textwidth]{pics/mood.png}}
-\caption{Viewer chooses from a mood while watching with
-             friends.}
+\caption{Viewer chooses from a mood to generate a genre-specific playlist.}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h!]
 \centering 
 \label{fig:model4}
 \includegraphics[width=0.45\textwidth]{pics/choosefriends.png}}
-\caption{Choosing a Mood}
+\caption{Viewer chooses a mood to watch with friends.}
 \end{figure}
 
 A user may select multiple moods if they are watching alone, or if
