--- a/paper/main.ltx
+++ b/paper/main.ltx
@@ -2,8 +2,10 @@
 \documentclass[final]{ieee}
 
 \usepackage{times}
-\usepackage{color}
+%\usepackage{color}
 \usepackage{ieeefig}
+\usepackage{graphicx}
+\usepackage{subfig}
 
 \renewcommand{\tt}[1]{\texttt{#1}}
 \newcommand{\xivpt}{\fontsize{15pt}{15pt}}
