--- a/paper/system.tex
+++ b/paper/system.tex
@@ -18,10 +18,10 @@ recommend a new show.  Users can override or remove any recommendation
 at any time.
 
 \begin{figure}
-\centering \subfloat[Browse for shows and add them to your WatchBox]
-           {\label{fig:model1}\includegraphics[width=0.45\textwidth]{pics/browse.png}}
-           ~~\subfloat[Add shows from your WatchBox to your playlist]
-           {\label{fig:model1}\includegraphics[width=0.45\textwidth]{pics/watchbox.png}}
+\centering
+\subfloat[Browse for shows and add them to your WatchBox] 
+{\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/browse.png}}
+~~\subfloat[Add shows from your WatchBox to your playlist] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/watchbox.png}}
 \caption{Browsing and adding shows to your WatchBox}
 \label{fig:watchbox}
 \end{figure}
@@ -67,13 +67,11 @@ shows like Gossip Girl or The Hills.  The ‘trashy’ category will have
 shows like Jersey Shore or the Real Houswives.
 
 \begin{figure}
-\centering \subfloat[Viewer chooses from a mood]
-           {\label{fig:model1}\includegraphics[width=0.45\textwidth]{pics/mood.png}}
-           ~~\subfloat[Viewer chooses from a mood while watching with
-             friends]
-           {\label{fig:model1}\includegraphics[width=0.45\textwidth]{pics/choosefriends.png}}
-\caption{Choosing a Mood}
-\label{fig:mood}
+\centering
+\subfloat[Viewer chooses friends to watch with] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/choosefriends.png}}
+~~\subfloat[Viewer chooses from one of the three recommended shows] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/chooseshow.png}}
+\caption{Watching with friends}
+\label{fig:friends}
 \end{figure}
 
 A user may select multiple moods if they are watching alone, or if
@@ -87,13 +85,11 @@ shows, taking into account both you and your friend’s preferences, as
 well as what mood you’re in.
 
 \begin{figure}
-\centering \subfloat[Playlist population based on your mood]
-           {\label{fig:yourmood}\includegraphics[width=0.45\textwidth]{pics/youmoodrec.png}}
-           ~~\subfloat[Recommendation based on you, your friends, and
-             your mood]
-           {\label{fig:groupmood}\includegraphics[width=0.45\textwidth]{pics/friendsmoodrec.png}}
-\caption{Mood Recommendations}
-\label{fig:moodrecommend}
+\centering
+\subfloat[Viewer chooses from a mood] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/mood.png}}
+~~\subfloat[Viewer chooses from a mood while watching with friends] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/choosefriends.png}}
+\caption{Choosing a Mood}
+\label{fig:mood}
 \end{figure}
 
 \subsection{Implementation}
