--- a/paper/local.bib
+++ b/paper/local.bib
@@ -1,3 +1,11 @@
+@misc{target,
+author={Charles Duhigg},
+title={How Companies Learn Your Secrets},
+howpublished={\url{http://www.nytimes.com/2012/02/19/magazine/shopping-habits.html}},
+year={2012},
+month={February},
+}
+
 @misc{jwplayer,
 title={JWPlayer},
 howpublished={\url{http://www.longtailvideo.com/}},
