made figures bigger

--- a/paper/system.tex
+++ b/paper/system.tex
@@ -21,8 +21,9 @@ at any time.
 \begin{figure}
 \centering
 \subfloat[Browse for shows and add them to your WatchBox] 
-{\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/browse.png}}
-~~\subfloat[Add shows from your WatchBox to your playlist] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/watchbox.png}}
+{\label{fig:browse}\includegraphics[width=0.45\textwidth]{pics/browse.png}}
+
+\subfloat[Add shows from your WatchBox to your playlist] {\label{fig:watchbox}\includegraphics[width=0.45\textwidth]{pics/watchbox.png}}
 \caption{Browsing and adding shows to your WatchBox}
 \label{fig:watchbox}
 \end{figure}
@@ -69,8 +70,10 @@ shows like Jersey Shore or the Real Houswives.
 
 \begin{figure}
 \centering
-\subfloat[Viewer chooses friends to watch with] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/choosefriends.png}}
-~~\subfloat[Viewer chooses from one of the three recommended shows] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/chooseshow.png}}
+\subfloat[Viewer chooses friends to watch with] {\label{fig:choosefriends}\includegraphics[width=0.4\textwidth]{pics/choosefriends.png}}
+
+
+\subfloat[Viewer chooses from one of the three recommended shows] {\label{fig:chooseshows}\includegraphics[width=0.4\textwidth]{pics/chooseshow.png}}
 \caption{Watching with friends}
 \label{fig:friends}
 \end{figure}
@@ -87,8 +90,7 @@ well as what mood you’re in.
 
 \begin{figure}
 \centering
-\subfloat[Viewer chooses from a mood] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/mood.png}}
-~~\subfloat[Viewer chooses from a mood while watching with friends] {\label{fig:model1}\includegraphics[width=0.24\textwidth]{pics/choosefriends.png}}
+\subfloat[Viewer chooses from a mood] {\label{fig:model1}\includegraphics[width=0.45\textwidth]{pics/mood.png}}
 \caption{Choosing a Mood}
 \label{fig:mood}
 \end{figure}
