--- a/paper/main.ltx
+++ b/paper/main.ltx
@@ -2,7 +2,7 @@
 \documentclass[final]{ieee}
 
 \usepackage{times}
-%\usepackage{color}
+\usepackage{url}
 \usepackage{ieeefig}
 \usepackage{graphicx}
 \usepackage{subfig}
